# libft

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  minimake.sh
inc/: ft_dtoa_sc.h  ft_ldtoa.h  ft_std.h  libft.h
scripts/: gen-CMakeLists.sh
src/: CMakeLists.txt  bubblesort_lexical.c  ft_array_destroy.c  ft_array_len.c  ft_arrayclear.c  ft_arraylen.c  ft_atoi.c  ft_atoi_base.c  ft_bzero.c  ft_calloc.c  ft_destroy_array.c  ft_dtoa_sc1.c  ft_dtoa_sc2.c  ft_dynmem.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isinset.c  ft_islower.c  ft_isprint.c  ft_isspace.c  ft_issymbol.c  ft_isupper.c  ft_itoa.c  ft_ldtoa1.c  ft_ldtoa2.c  ft_lltoa_base.c  ft_ltoa_base.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memdmp.c  ft_memdup.c  ft_memmove.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_base_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  (+57 more)
tests/: CMakeLists.txt  ft_atoi_base_test.c  ft_strstring_t.c  ft_strtok_t.c
tests/src/: ft_strjoin_multi.cpp
tests/standalone_tests/: ft_arraylen.c  ft_memdmp_test.c  ft_strcsetlen.c  ft_strnstrip_t.c  ft_strstringlen_t.c
